# T2S-Bench

./: README.md  evaluate_model.py  evaluate_structure.py  pyproject.toml
scripts/: Meta-Llama-3-8B.sh  claude-haiku-4-5.sh
