[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t2s-bench"
version = "0.1.0"
description = "T2S-Bench: Benchmarking Comprehensive Text-to-Structure Reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "tqdm",
    "numpy",
    "openai>=1.0",
    "pyarrow",
    "sentence-transformers",
    "scipy",
    "httpx",
    "datasets",
    "accelerate",
]

[tool.setuptools]
py-modules = ["evaluate_model", "evaluate_structure"]
